fix: add gap bottom page

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -710,3 +710,7 @@ a {
     }
   }
 }
+
+.pb-10 {
+  padding-bottom: 10rem;
+}
